--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 <body>
     <h1>Welcome to My DevOps Project</h1>
     <p>This project demonstrates Git and GitHub workflows.</p>
+    <h3>Features</h3>
+    <ul>
+        <li>Git Branching</li>
+        <li>Merge Conflict Handling</li>
+    </ul>
 </body>
 </html>
