Experimented with homepage layout

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
     <h1>Welcome to My DevOps Project</h1>
     <p>This project demonstrates Git and GitHub workflows.</p>
+    <p>Experimenting with layout design.</p>
 </body>
 </html>
