Updated homepage heading(forth time) in feature

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>DevOps Git Project</title>
 </head>
 <body>
-    <h1>Welcome to my DevOps Project</h1>
+    <h1>Welcome to DevOps Project</h1>
     <p>This project demonstrates Git and GitHub workflows.</p>
     <h3>Features</h3>
     <ul>
