--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>DevOps Git Project</title>
 </head>
 <body>
-    <h1>Welcome to My DevOps Project</h1>
+    <h1>Welcome to My DevOps-Git Project</h1>
     <p>This project demonstrates Git and GitHub workflows.</p>
 </body>
 </html>
